--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,9 @@
         "doctrine/doctrine-bundle": "^2.14",
         "doctrine/orm": "^3.3",
         "iconic/db": "^0.1.2"
+    },
+    "require-dev": {
+        "phpstan/phpstan": "^2.1",
+        "phpunit/phpunit": "^12.2"
     }
 }
