--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "symfony/security-bundle": "^7.2",
         "doctrine/doctrine-bundle": "^2.14",
         "doctrine/orm": "^3.3",
-        "iconic/db": "^0.1.2"
+        "iconic/db": "^0.1.2",
+        "symfony/form": "^7.3"
     },
     "require-dev": {
         "phpstan/phpstan": "^2.1",
